--- a/Flipkart_Automation/test-output/emailable-report.html
+++ b/Flipkart_Automation/test-output/emailable-report.html
@@ -31,20 +31,14 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">46.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">55.9 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">com.flipkart.testscripts.AddProduct</td><td><a href="#m1"><b>addProductTest</b>  </a></td><td class="numi">1</td><td>1586190094923</td><td class="numi">15454</td></tr>
+<tr><th colspan="4">Test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">com.flipkart.testscripts.AddProduct</td><td><a href="#m1"><b>addProductTest</b>  </a></td><td class="numi">1</td><td>1586200351620</td><td class="numi">26051</td></tr>
 </table>
-<h1>Default test</h1>
+<h1>Test</h1>
 <h2 id="m1">com.flipkart.testscripts.AddProduct:addProductTest</h2>
-<div style="padding-left:3em">
-<p>null</p>
-com.flipkart.genericlib.FileLibrary.getExcelData(FileLibrary.java:43)
-<br/>at com.flipkart.testscripts.AddProduct.addProductTest(AddProduct.java:26)
-<br/>25 lines not shown
-</div>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
